--- a/gb/24/6/29/n14279870.md
+++ b/gb/24/6/29/n14279870.md
@@ -3,22 +3,21 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>金曲35完整名单 歌王MC HotDog热狗歌后孙盛希</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280319-DSC_2074-600x400.jpg" />
-<h6>第35届华语歌王歌后分别由MC HotDog热狗与孙盛希登上宝座。（宋碧龙／大纪元）
-</h6>
+<h6>第35届华语歌王歌后分别由MC HotDog热狗与孙盛希登上宝座。（宋碧龙／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年06月29日讯】（大纪元记者台湾台北记者站报导）第35届金曲奖今晚在台北小巨蛋颁奖，得奖名单已经全部揭晓，本届华语歌王歌后分别由MC HotDog热狗与孙盛希拿下，最后颁发的年度专辑奖由草东没有派对以专辑《瓦合》摘下。</p>
 <p>本届最佳男歌手奖由MC HotDog 热狗凭着专辑《脏艺术家》获得。至于得奖原因，评审委员陈子鸿表示，入围男歌手各有各的风格，因此讨论了两轮，最后因MC HotDog歌唱的感染力强烈，在此共识下，由MC HotDog胜出。</p>
-<figure id="attachment_14280322" aria-describedby="caption-attachment-14280322" style="width: 603px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280322-DSC_2091-scaled.jpg"><img decoding="async" class=" wp-image-14280322" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280322-DSC_2091-scaled.jpg" alt="MC HotDog热狗,孙盛希" width="603" b="402" /></a><figcaption id="caption-attachment-14280322" class="wp-caption-text">本届华语歌王歌后分别由MC HotDog热狗（左）与孙盛希登上宝座。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_14280322" aria-describedby="caption-attachment-14280322" style="width: 603px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280322-DSC_2091-scaled.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14280322" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280322-DSC_2091-scaled.jpg" alt="MC HotDog热狗,孙盛希" width="603" b="402"></a><figcaption id="caption-attachment-14280322" class="wp-caption-text">本届华语歌王歌后分别由MC HotDog热狗（左）与孙盛希登上宝座。（宋碧龙／大纪元）</figcaption></figure>
 <p>最佳华语女歌手则由已经入围三次的孙盛希以《BOOMERANG》胜出。孙盛希在台上激动的说，“没想到是我，我出道刚好十年，所以这个奖项对我的义意很大，其实想透过这张专辑，分享我很有趣的一个题目，人生中不断在丢掷回力镖，用不同形式回到我们身边，希望我们可以投入更多好的东西给予人生。”</p>
 <p>而最佳乐团、最佳华语专辑奖及年度专辑奖皆由草东没有派对《瓦合》获奖，发迹至今过十个多年头，今年算是草东没有派对丰收的一年。</p>
 <p>本届最佳台语男歌手奖是律师歌手苏明渊，他以专辑《心内乌空》拿下此奖，他在台上感谢所有帮助这张唱片的人，更表示要将这份幸运送给爸妈，希望他们都能健健康康的。</p>
-<figure id="attachment_14280327" aria-describedby="caption-attachment-14280327" style="width: 596px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280327-e48b4127c73d76e56f7ce214-scaled.jpg"><img decoding="async" class=" wp-image-14280327" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280327-e48b4127c73d76e56f7ce214-scaled.jpg" alt="苏明渊,黄妃" width="596" b="397" /></a><figcaption id="caption-attachment-14280327" class="wp-caption-text">第35届金曲奖最佳台语男女歌手奖”分别由苏明渊（右）与黄妃摘下。 （许基东／大纪元）</figcaption></figure>
+<figure id="attachment_14280327" aria-describedby="caption-attachment-14280327" style="width: 596px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280327-e48b4127c73d76e56f7ce214-scaled.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14280327" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280327-e48b4127c73d76e56f7ce214-scaled.jpg" alt="苏明渊,黄妃" width="596" b="397"></a><figcaption id="caption-attachment-14280327" class="wp-caption-text">第35届金曲奖最佳台语男女歌手奖”分别由苏明渊（右）与黄妃摘下。 （许基东／大纪元）</figcaption></figure>
 <p>最佳台语女歌手奖则由黄妃以专辑《十八般武艺》获得。这次是她第3座金曲奖座，她用台语感谢自己的父母及众神明，说自己很想念已逝的父母，“真的很遗憾，希望得这个奖是他们在世的时候。回想父母对自己最好的教诲，她说是，“一步一脚印，要善心的对待别人。”</p>
 <p>人气乐团告五人则是凭着《又到天黑》拿下年度歌曲奖，他们以歌词向百工百业的人们致敬，MV也拍下不同行业辛勤工作的场景，获得许多好评。主唱云安上台致词时除了感谢伙伴跟团队，也特别谢谢歌迷支持，期待每个人找到人生BGM（背景音乐）。</p>
-<figure id="attachment_14280362" aria-describedby="caption-attachment-14280362" style="width: 602px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280362-20240629-_H7A6762_2024-06-30T00_57_01-scaled.jpg"><img decoding="async" class=" wp-image-14280362" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280362-20240629-_H7A6762_2024-06-30T00_57_01-scaled.jpg" alt="" width="602" b="401" /></a><figcaption id="caption-attachment-14280362" class="wp-caption-text">第35届金曲奖最佳年度歌曲颁给告五人。（许基东／大纪元）</figcaption></figure>
+<figure id="attachment_14280362" aria-describedby="caption-attachment-14280362" style="width: 602px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280362-20240629-_H7A6762_2024-06-30T00_57_01-scaled.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14280362" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280362-20240629-_H7A6762_2024-06-30T00_57_01-scaled.jpg" alt="" width="602" b="401"></a><figcaption id="caption-attachment-14280362" class="wp-caption-text">第35届金曲奖最佳年度歌曲颁给告五人。（许基东／大纪元）</figcaption></figure>
 <p>来自布农族的20岁女歌手Makav真爱，凭着原住民专辑《宝藏》获评审青睐，一举抱回最佳原住民专辑及最佳新人奖。她一上台高举金曲奖杯表示：“我将用感谢及荣耀归给神，感谢神给予这一切！”</p>
 <p>本届最佳演唱组合由欧开合唱团 O-Kai Singers赢得；最佳乐团则是颁给草东没有派对。</p>
-<figure id="attachment_14280333" aria-describedby="caption-attachment-14280333" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280333-36be78aef2c0c709384c3a23.jpg"><img decoding="async" class=" wp-image-14280333" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280333-36be78aef2c0c709384c3a23.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14280333" class="wp-caption-text">第35届最佳演唱组合奖由欧开合唱团 O-Kai Singers抱回。 （许基东／大纪元）</figcaption></figure>
+<figure id="attachment_14280333" aria-describedby="caption-attachment-14280333" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14280333-36be78aef2c0c709384c3a23.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14280333" src="https://i.epochtimes.com/assets/uploads/2024/06/id14280333-36be78aef2c0c709384c3a23.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14280333" class="wp-caption-text">第35届最佳演唱组合奖由欧开合唱团 O-Kai Singers抱回。 （许基东／大纪元）</figcaption></figure>
 <p>以下为第35届金曲奖得奖名单：</p>
 <p>◇年度专辑奖：瓦合／黑皮国有限公司（演唱者：草东没有派对）</p>
 <p>◇年度歌曲奖：又到天黑／带你飞／相信音乐国际股份有限公司（演唱者：告五人）</p>
@@ -50,37 +49,34 @@
 <p>◇最佳演奏录音专辑奖：Pluto Potato／明天的歌有限公司（主要录音人员：蔡周翰／主要混音人员：陈君豪／主要母带后制人员：Alex Gordon）内建系统／好有感觉音乐事业有限公司（主要录音人员：杰瑞米?凯斯／主要混音人员：大卫·达林顿／主要母带后制人员：大卫·达林顿）</p>
 <p>◇特别贡献奖：刘清池? 郑华娟</p>
 <p>责任编辑：梁梦竹</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274759.md#1">日乐团生物股长将登金曲奖 联手苏打绿阿龚共演</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279465.md#1">“金曲35”舞台设计曝光 主舞台侧边搭设延伸台</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287632.md#1">蔡思韵影视作品3连发 宣布月底驻台拍新片</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287585.md#1">生病时1,800万美元遭挪移 莎朗史东有信念不愤怒</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">阅读《转法轮》 大洋洲法轮功学员谈感悟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/7/n11574300.md#1" target="_blank">他们为我们的生活带来光明（2）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284643.md#1">【探索时分】台湾军购千架无人机 有何性能？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284970.md#1">【环球直击】英国大选工党获胜 新首相面临考验</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284969.md#1">【中国禁闻】中共胁迫留美精英 协助大外宣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283097.md#1">世界小姐张梓琳晒带娃照 称8岁长女是苗条姐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？ 专家：“负热量食物”有助于减重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281348.md#1">日本北海道之旅 难忘的农庄餐馆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280784.md#1">告别湿答答 内外除湿这样做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276567.md#1">厨房坏习惯会致癌？用对冰箱厨具 远离毒物危害</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/6/29/n14279870.htm">金曲35完整名单 歌王MC HotDog热狗歌后孙盛希</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/29/n14279870.htm">金曲35完整名单 歌王MC HotDog热狗歌后孙盛希</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279870.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
