--- a/gb/24/1/15/n14158926.md
+++ b/gb/24/1/15/n14158926.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>伍斯特演出全爆满 市长亲自宣布“神韵日”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158948-2401141825072124-600x400.jpg" />
-<h6>2024年1月14日下午，伍斯特市长Joseph Petty亲临剧院，向神韵巡回艺术团团长宇鸣颁发褒奖，感谢神韵为当地观众呈现历史悠久的中国传统文化。（宋昇桦／大纪元）
-</h6>
+<h6>2024年1月14日下午，伍斯特市长Joseph Petty亲临剧院，向神韵巡回艺术团团长宇鸣颁发褒奖，感谢神韵为当地观众呈现历史悠久的中国传统文化。（宋昇桦／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年01月15日讯】（大纪元美国伍斯特记者站报导）2024年1月14日下午，神韵巡回艺术团在麻州伍斯特市汉欧沃剧院（Hanover Theatre）的第三场演出，伍斯特市长Joseph M. Petty亲临剧院向神韵颁发褒奖，将2024年1月13日和14日定为伍斯特市的“神韵艺术团日”。</p>
 <p>往年，神韵艺术团莅临伍斯特演出时，M.Petty先生也曾亲临剧场向神韵颁发褒奖。</p>
@@ -13,28 +12,29 @@
 <p>M.Petty推崇神韵复兴传统文化的使命，并对艺术家的艰辛付出表达感激。</p>
 <p>“重要的是，每一种文化都应该记住他们的根，并提醒人们来自哪里，以及我们在某些方面都是相似的，都向往快乐的生活与自由。”他觉得，这也正是神韵节目传递的讯息，“不要忘记你的根、你来自哪里，记住你的力量、你的传统和你的宗教信仰。”</p>
 <p>最后，他强调说：“记住你们的传统，创世主将永远与你们同在。”</p>
-<figure id="attachment_14158928" aria-describedby="caption-attachment-14158928" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158928-2401142309512124.jpg"><img decoding="async" class="size-large wp-image-14158928" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158928-2401142309512124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14158928" class="wp-caption-text">2024年1月14日下午，神韵巡回艺术团在麻萨诸塞州伍斯特市（Worcester）第三场演出的票房再获佳绩，爆满加座。演出结束后，神韵演员向观众谢幕。（宋昇桦／大纪元）</figcaption></figure>
-<figure id="attachment_14159216" aria-describedby="caption-attachment-14159216" style="width: 340px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14159216-2401152055182124.jpg"><img decoding="async" class=" wp-image-14159216" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14159216-2401152055182124.jpg" alt="" width="340" b="514" /></a><figcaption id="caption-attachment-14159216" class="wp-caption-text">伍斯特市长Joseph M. Pettyvu颁发的褒奖。（大纪元）</figcaption></figure>
+<figure id="attachment_14158928" aria-describedby="caption-attachment-14158928" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158928-2401142309512124.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158928" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158928-2401142309512124-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14158928" class="wp-caption-text">2024年1月14日下午，神韵巡回艺术团在麻萨诸塞州伍斯特市（Worcester）第三场演出的票房再获佳绩，爆满加座。演出结束后，神韵演员向观众谢幕。（宋昇桦／大纪元）</figcaption></figure>
+<figure id="attachment_14159216" aria-describedby="caption-attachment-14159216" style="width: 340px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14159216-2401152055182124.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14159216" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14159216-2401152055182124.jpg" alt="" width="340" b="514"></a><figcaption id="caption-attachment-14159216" class="wp-caption-text">伍斯特市长Joseph M. Pettyvu颁发的褒奖。（大纪元）</figcaption></figure>
 <p>伍斯特市长Joseph M. Petty褒奖全文如下：</p>
 <p>鉴于2006年，神韵艺术团在纽约由一群卓越的华人艺术家建立，此后成长为一个在世界上家喻户晓的名字。</p>
 <p>鉴于神韵艺术团是世界上顶级的中国古典舞蹈和音乐团体，她的使命是传承中国五千年历史的精华，并以最为纯正和美丽的形式，将她分享给当代世界。</p>
 <p>鉴于纵观历史，几乎每种文化都注重神圣的启迪。而今天，神韵的艺术家们在日常的训练中遵循其高贵的传统，因此而能带来美好、纯洁、良善的演出。神韵是一场滋育灵魂的演出。</p>
 <p>鉴于通过音乐和舞蹈这种普世共通的语言，神韵织就一幅锦绣画卷，描绘了天国圣境、古代传奇，以及当代的英雄故事。</p>
 <p>鉴于神韵取得了卓越的成就，艺术家和评论家们一致认可神韵是世界顶级演出。</p>
-<p>因此，我，市长Joseph M. Petty在此宣布，2024年1月13日和1月14日是伍斯特市的神韵艺术团日，并鼓励所有居民关注并前往观赏。</p>
+<p>因此，我，市长Joseph M. Petty在此宣布，2024年1月13日和1月14日是伍斯特市的神韵艺术团日，并鼓励所有居民关注并前往观赏。
+</p>
 <h2>剧院董事爱神韵：独一无二 前所未见</h2>
-<figure id="attachment_14158930" aria-describedby="caption-attachment-14158930" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158930-2401141642072124.jpg"><img decoding="async" class="size-large wp-image-14158930" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158930-2401141642072124-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14158930" class="wp-caption-text">2024年1月14日下午，美国SaaS技术及服务企业首席执行官、汉欧沃剧院（The Hanover Theatre）董事会成员Scott Johnson和妻子Melanie Brooks观赏了神韵巡回艺术团在该剧院的第三场演出。（卫泳／大纪元）</figcaption></figure>
+<figure id="attachment_14158930" aria-describedby="caption-attachment-14158930" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158930-2401141642072124.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158930" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158930-2401141642072124-600x401.jpg" alt="" width="600" b="401"></a><figcaption id="caption-attachment-14158930" class="wp-caption-text">2024年1月14日下午，美国SaaS技术及服务企业首席执行官、汉欧沃剧院（The Hanover Theatre）董事会成员Scott Johnson和妻子Melanie Brooks观赏了神韵巡回艺术团在该剧院的第三场演出。（卫泳／大纪元）</figcaption></figure>
 <p>美国SaaS技术及服务企业首席执行官、汉欧沃剧院（The Hanover Theatre）董事Scott Johnson首次观赏了神韵演出。他表示，通过一出出的舞剧，他真切地感受到神韵复兴中华文化，找回传统的努力。</p>
 <p>“我从未见过这样的演出；这台秀独一无二，独树一帜。”他表示，如果有机会见到神韵艺术家，他会告诉他们，“我爱神韵，我爱神韵，我爱神韵！”</p>
 <p>Johnson先生在两家SaaS技术及服务公司担任执行长，同时长期致力于慈善事业。他是一家南非非营利组织的创始人及执行董事，在南非QwaQwa地区建立并运营了最大的孤儿院，为250多名儿童提供安全的生长环境。</p>
 <p>“神韵有惊人的艺术表现力，前所未见！”Johnson在观看神韵后赞叹道，“我非常喜欢这场演出。”</p>
 <p>他说，如果十分是满分，他一定会给演出打满分，“甚至是十一分！”</p>
 <p>Johnson举例说起最喜爱的节目舞，“我们很喜欢那些女演员身着长袖跳舞的节目。”他认为神韵舞蹈的编舞令人难忘，“神韵舞蹈中有一个特别的部分，演员们时而分开时而聚合，带来舞动时的一种特殊动态效果。”</p>
-<p><span style="font-weight: 400;">神韵带给人的不仅是美丽的演出，其讲述的故事及传达的讯息也让Johnson感到鼓舞。</span></p>
-<p><span style="font-weight: 400;">“这些故事都很棒！”他继续说道，“我原以为都是传统的</span><span style="font-weight: 400;">历史故事</span><span style="font-weight: 400;">，而没想到演出中还会有关于现代中国的故事。这真是多种元素的完美结合。”</span></p>
-<p>Johnson表示，神韵展示的神性内涵也让他受益匪浅，“我没想到演出中会包含这些内容，我从中学到了很多。”</p>
+<p><span style="font-weight: 400">神韵带给人的不仅是美丽的演出，其讲述的故事及传达的讯息也让Johnson感到鼓舞。</span></p>
+<p><span style="font-weight: 400">“这些故事都很棒！”他继续说道，“我原以为都是传统的</span><span style="font-weight: 400">历史故事</span><span style="font-weight: 400">，而没想到演出中还会有关于现代中国的故事。这真是多种元素的完美结合。”</span></p>
+<p>Johnson表示，神韵展示的神性内涵也让他受益匪浅，“我没想到演出中会包含这些内容，我从中学到了很多。”
 <h2>神韵展现传统内涵 首席产品官：深获启发</h2>
-<figure id="attachment_14158931" aria-describedby="caption-attachment-14158931" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158931-2401141652592124.jpg"><img decoding="async" class="size-large wp-image-14158931" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158931-2401141652592124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14158931" class="wp-caption-text">2024年1月14日下午，全球药物安全SaaS软件解决方案巨头的首席产品官Pat Jenakanandhini和太太Shalini Parthibhan，观看了神韵巡回艺术团在汉欧沃剧院的第三场演出。（文烨／大纪元）</figcaption></figure>
+<figure id="attachment_14158931" aria-describedby="caption-attachment-14158931" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158931-2401141652592124.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158931" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158931-2401141652592124-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14158931" class="wp-caption-text">2024年1月14日下午，全球药物安全SaaS软件解决方案巨头的首席产品官Pat Jenakanandhini和太太Shalini Parthibhan，观看了神韵巡回艺术团在汉欧沃剧院的第三场演出。（文烨／大纪元）</figcaption></figure>
 <p>全球药物安全SaaS软件解决方案巨头的首席产品官Pat Jenakanandhini和太太Shalini Parthibhan一起观看了演出。</p>
 <p>“中国传统价值理念在演出中完好地展现，我觉得非常好，非常精彩。”Jenakanandhini表示，演出中的中国古典舞非常独特，舞台上的一切深深打动了他的心，“我从未见过传统的中国舞蹈，看到这些非常有启发。”</p>
 <p>Jenakanandhini表示，餐厅那个节目令他印象深刻。</p>
@@ -46,37 +46,34 @@
 <p>在观赏演出时，他感受到，“不同的文化之间有许多相似之处”，“我在节目里看到了佛陀的画像，佛陀原本来自印度，而印度也拥有许多佛陀的寺庙。”</p>
 <p>“因此，我看到了，人与人之间信神文化的一种联系。”Jenakanandhini说。</p>
 <p>责任编辑：曾臻</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/16/n13974190.md#1">公司老板：美国人民应看神韵 警惕共产主义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/1/n13985875.md#1">美国小姐大赛教练：神韵是最高水准演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/3/n13987148.md#1">美国航空机长：神韵带来了希望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/7/n13990102.md#1">美国防部项目经理：神韵是美丽文化的收藏品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/7/n13990142.md#1">美国陆军军官：喜爱神韵呈现的中国文化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/1/n14148330.md#1">美国联合航空维修经理：神韵演出令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/13/n11449283.md#1" target="_blank">袁斌：巫宁坤们的遭遇告诉后人什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/18/n10153765.md#1" target="_blank">共产暴政录——消灭宗教</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391372.md#1">冬至祈福六宜三不宜  古人迎祥避灾殃的作法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396714.md#1">美国女孩自曝前世死因：飞机撞击帝国大厦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的，维吉尼亚，有一个圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394956.md#1">【未解之谜】时间是神？验证“天上方一日 地上已千年”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/13/n12686427.md#1">【元曲大家】名闻天下、声震闺阁的郑光祖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396726.md#1">【军事情报局】俄中将身亡 朝军伤亡率已近10%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396454.md#1">【未解之谜】无神论教授濒死带回神的启示 美国将被净化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397280.md#1">【秦鹏观察】没人敢说真话 习军方亲信不见了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14393938.md#1">父母看过来 6种Costco超值商品可在年节买</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395770.md#1">美国排名前十的高薪稳定工作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395790.md#1">中共拒绝让主要调查人员上船检查 瑞典批评</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396610.md#1">上海法院出庭旧照曝光 刘嘉玲成港星第一人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14397235.md#1">齐秦被爆罹患肺癌晚期 歌手姐姐和妻子急回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14397202.md#1">赵薇遭封杀逾3年 其富商丈夫黄有龙被追巨债</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14395896.md#1">中国禁播 娄烨金马奖最佳影片在台湾上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396275.md#1">Spotify公布十年来播放量最高的圣诞节歌曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396859.md#1">马铃薯如何存放6个月？ 英国超市教你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395628.md#1">旅行时如何寻找美食的4个诀窍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396187.md#1">研究：男人和女人羡慕异性什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391805.md#1">营养师破解补钙三误区 九种蔬菜含钙量完胜牛奶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392285.md#1">琼瑶抉择促人深思 如何应对老年生活挑战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/15/n14158926.htm">伍斯特演出全爆满 市长亲自宣布“神韵日”</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/15/n14158926.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
