--- a/gb/17/12/28/n10001084.md
+++ b/gb/17/12/28/n10001084.md
@@ -47,18 +47,12 @@
 <p>此外，消基会南区分会表示，今年2~10月份接到4千多通申诉电话，以网购纠纷最多，次为桶装瓦斯押瓶问题，再为政府对空污的因应措施。◇</p>
 <p>责任编辑：杜文卿</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/12/30/n4330317.md#1">台回顾十大消费新闻 黑心油第1名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/20/n4621307.md#1">台2015年十大消费新闻 黑心油二连冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/3/n4631969.md#1">消委会去年接获旅游事务投诉增41%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/27/n8636827.md#1">南部十大消费新闻 食安占半数</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/27/n8637197.md#1">南部十大消费新闻 维冠倒塌居首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/1/13/n8699464.md#1">台湾去年消费10大新闻  这则比食安更受重视</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/1/13/n8700609.md#1">台2016十大消费新闻 公安议题夺冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/1/26/n8747627.md#1">香港迷你仓大火列消费新闻之首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635897.md#1">桥头预售屋疑因台积电想涨价 建商毁约转卖遭判赔二千余万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635864.md#1">欠税四千万拒缴 提空账户2.5亿元 假离婚 高雄七旬翁被管收</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/10/23/n4278970.md#1" target="_blank">唐风：加拿大警官看完《转法轮》之后</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/16/n10061474.md#1" target="_blank">“不学ABC 能做接班人”的张玉勤</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
