--- a/gb/18/11/1/n10823532.md
+++ b/gb/18/11/1/n10823532.md
@@ -15,18 +15,12 @@
 <p>他强调，“农产品价格由市场机制决定，没有天花板价格，农产品价格小组每周监控农产品价格，监控价格不能低于农民生产成本，主委指示，一旦农产品价格开始下滑，要求各产业单位采取相关措施，确保农民收益。”</p>
 <p>责任编辑：叶琴</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/7/22/n2598471.md#1">台湾水果不畏景气寒 1-6月外销增3成</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/12/11/n2750930.md#1">江陈会 不敢碰农药问题 农产输中骗很大</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/13/n2874988.md#1">台签署ＥＣＦＡ 骗很大 农委会瞎说  柳丁销中未全数出货</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/6/25/n2947649.md#1">台农委会救蕉失灵 蕉价跌更惨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/9/3/n3014771.md#1">台湾水果盛产  感谢企业机关相挺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/7/8/n3309613.md#1">台立委要求启动95机制 农委会：不需要</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/11/29/n3443502.md#1">台农委会：加强甜柿国内外促销</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/11/n7987256.md#1">蔡英文推创新农业  讨论成立公司助外销</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639732.md#1">台政院拍板修劳保条例 拨补入法、中央负最后支付责任</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639727.md#1">驳“台湾病” 经长：出口好是因AI发展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11241790.md#1" target="_blank">共产暴政录：柬共屠杀300万民众及30万华人</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/25/n9992657.md#1" target="_blank">林辉：贾宝玉林黛玉扮演者曾被叫“阿飞”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
