--- a/gb/25/8/15/n14574231.md
+++ b/gb/25/8/15/n14574231.md
@@ -43,12 +43,12 @@
 <p>原文：<ahref="https://www.theepochtimes.com/bright/this-picturesque-medieval-village-hasnt-changed-since-the-1300s-and-yes-people-still-thrive-there-5899796">This Picturesque Medieval Village Hasn’t Changed Since the 1300s—and, Yes, People Still Thrive There</a>刊登于英文《大纪元时报》。</p>
 <p>责任编辑：高静#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/10/n14222631.md#1">歌词：雪落轻轻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632432.md#1">苏东坡生活禅：东坡羹以“真”调味</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646521.md#1">告别眼袋黑眼圈 从内而外改善眼周问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652033.md#1">【厨娘香Q秀】焗酿蟹盖和豆酥虫草蒸星斑卷</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652046.md#1">脾虚老得快 中医养脾逆龄术</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644500.md#1">五律：歌神韵（二首）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962346.md#1" target="_blank">鲜为人知的马克思之一：专制的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/12/n11038748.md#1" target="_blank">邢诒心：作为地主崽的童年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
